fix question bank wrap

--- a/src/echos.scss
+++ b/src/echos.scss
@@ -211,6 +211,7 @@ md-list-item.echos-list-item, mat-list-item.echos-list-item {
       .small-list {
         padding-top: 8px;
         font-size: 0.8em;
+        flex-wrap: wrap;
         color: $echos-dark-grey!important;
         & > *:after {
           padding-right: 3px;
